nice stable-0.1-dev

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <canvas id="func-canvas" width="600" height="600"></canvas>
-    <input type="text" id="func-input" name="" value="">
+    <input type="text" id="func-input" name="" value="2 * sin(x) + cos( x / 2 * PI )" placeholder="ex: 2 * sin(x) + cos( x / 2 * PI )">
     <script type="text/javascript">
       new FuncDisp('func-canvas', 'func-input');
     </script>
